Add start of help text

--- a/django/sportsrec/templates/sportsrec/add_edit.html
+++ b/django/sportsrec/templates/sportsrec/add_edit.html
@@ -69,3 +69,22 @@
 </div>
 
 {% endblock %}
+
+{% block pre-content %}
+{# add content here #}
+<div id="sidebar-right">
+  {# eg #}
+  {% if club_edit %}
+  <div class="widget">
+    <div class="title">Club edit stuff</div>
+    For clubs
+  </div>
+  {% elif member_edit %}
+  <div class="widget">
+    For members
+  </div>
+  
+  {# afaik values are club_edit, club_add, member_add, member_edit, and user_profile #}
+  {% endif %}
+</div>
+{% endblock %}
