Making it look pretty :)

--- a/django/sportsrec/templates/sportsrec/add_edit.html
+++ b/django/sportsrec/templates/sportsrec/add_edit.html
@@ -76,8 +76,19 @@
   {# eg #}
   {% if club_edit %}
   <div class="widget">
-    <div class="title">Club edit stuff</div>
-    For clubs
+    <div class="title">Data Dictionary</div>
+	<div>Name:  Name of your Club</div><br>
+	<div>Owner:  Administering Member of your Club</div><br>
+	<div>Address:  The address of your Club.</div><br>
+	<div>Location:  The lat/long coordinates of the club. The coordinates of Perth are -31.95, 115.85.</div><br>
+	<div>Tags:  List of keywords that describe the club.</div><br>
+	<div>Type:  What type of club are you? If your type doesn't appear, choose 'Other' and let us know about it, at help@ucdb.com.</div><br>
+	<div>Recruiting:  Is your club open for recruiting new members?</div><br>
+	<div>Contact:  A trusted Member of your club the public can contact.</div><br>
+	<div>Facebook:  Your Facebook page, if you have one.</div><br>
+	<div>Twitter:  Your Twitter handle, if you have one.</div><br>
+	<div>Description:  Let us know a bit more about your club.</div><br>
+	
   </div>
   {% elif member_edit %}
   <div class="widget">
