--- a/django/sportsrec/templates/sportsrec/membership_list.html
+++ b/django/sportsrec/templates/sportsrec/membership_list.html
@@ -15,6 +15,7 @@
         <th>Club</th>
         <th>Date Created</th>
         <th>Last paid</th>
+        <td>Revoke Membership</th>
       </tr>
     </thead>
     <tbody>
@@ -40,6 +41,11 @@
         </td>
         <td>{{membership.joined}}</td>
         <td>{{membership.last_paid | default:""}}</td>
+        <td class="clickable menu-hilight">
+          <a href="{% url 'sportsrec:membership_delete' pk=membership.id %}">
+            Revoke
+          </a>
+      </td>
       </tr>
       {% endfor %}
     </tbody>
