--- a/django/sportsrec/templates/sportsrec/search_location.html
+++ b/django/sportsrec/templates/sportsrec/search_location.html
@@ -8,11 +8,11 @@
     <div class="large centre bold">
       <form action="{% url 'sportsrec:search_location' %}">
       <p>
-      <label for="name">Search query</label><br>
-      <input id="name" type="textbox" name="query" value="{{query}}" style="width:60%;"><br>
-      <label for="radius">Search radius (in km)</label><br>
-      <input id="radius" type="textbox" name="radius" value="{{radius}}" style="width:60%;"><br>
-      <input type="submit" value="Search">
+      	<label for="name">Address:</label><br>
+        <input id="name" type="textbox" name="query" value="Nedlands, Perth" style="width:200px;" class="normal">
+        <input type="submit" value="Search" class="normal"><br>
+        <label for="radius">Within Radius:</label><br>
+        <input id="radius" type="textbox" name="radius" value="5" style="width:4%;" class="normal"> km<br>
       </p>
     </div>
 </div>
@@ -90,7 +90,7 @@
 
 <div class="widget">
 <div class="title centre">Map:</div>
-<div id="map-canvas" style="width:100%;height:300px;"></div>
+<div id="map-canvas" style="width:100%;height:500px;"></div>
     <script src="https://maps.googleapis.com/maps/api/js?v=3key={AIzaSyAH5OCkIGApptBzMQGjs_Wlz8kc6xqTg8o}&sensor=true"></script>
     <script>
       var map;
@@ -121,7 +121,7 @@
         
         //Bouncy bounce
         marker.setAnimation(google.maps.Animation.BOUNCE);
-        setTimeout(function() { marker.setAnimation(null); }, 2000);
+        setTimeout(function() { marker.setAnimation(null); }, 2500);
         google.maps.event.addListener(marker, 'click', function() {
             infoWindow.open(map, marker);
         });
@@ -168,6 +168,7 @@
         }
     }
     google.maps.event.addDomListener(window, 'load', initialize);
+    
     </script>
 </div>
 </div>
