--- a/django/sportsrec/templates/sportsrec/search_name.html
+++ b/django/sportsrec/templates/sportsrec/search_name.html
@@ -8,8 +8,8 @@
     <div class="large centre bold">
       <form action="{% url 'sportsrec:search_name' %}">
       <p>
-      <input id="name" type="textbox" name="query" value="{{query}}" style="width:200px;">
-      <input type="submit" value="Search">
+      <input id="name" type="textbox" name="query" value="{{query}}" style="width:200px;" class="normal">
+      <input type="submit" value="Search" class="normal">
       </p>
     </div>
 </div>
