--- a/django/sportsrec/templates/sportsrec/search.html
+++ b/django/sportsrec/templates/sportsrec/search.html
@@ -19,8 +19,8 @@
     <div class="large centre bold">
       <form action="{% url 'sportsrec:search_tag' %}">
       <p>
-      <input id="name" type="textbox" name="query" value="Soccer" style="width:200px;">
-      <input type="submit" value="Search">
+      <input id="tags" type="textbox" name="query" value="Soccer" style="width:200px;" class="normal" title="Enter a comma separated list of tags">
+      <input type="submit" value="Search" class="normal">
       </p>
       </form>
     </div>
