--- a/django/sportsrec/templates/sportsrec/membership_list.html
+++ b/django/sportsrec/templates/sportsrec/membership_list.html
@@ -15,7 +15,7 @@
         <th>Club</th>
         <th>Date Created</th>
         <th>Last paid</th>
-        <td>Revoke Membership</th>
+        <th>Revoke Membership</th>
       </tr>
     </thead>
     <tbody>
