--- a/django/sportsrec/templates/sportsrec/member_list.html
+++ b/django/sportsrec/templates/sportsrec/member_list.html
@@ -18,7 +18,7 @@
         <th>Last name</th>
         <th>Email</th>
         <th>Interests</th>
-        <td>Edit</th>
+        <th>Edit</th>
         <th>Delete</th>
       </tr>
     </thead>
