--- a/django/sportsrec/templates/sportsrec/club_add_edit.html
+++ b/django/sportsrec/templates/sportsrec/club_add_edit.html
@@ -1,7 +1,7 @@
 {% extends "sportsrec/add_edit.html" %}
 
 {% block form-data %}
-<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script src="https://maps.google.com/maps/api/js?sensor=false"></script>
 <script>
   var timeout;
   var geocoder = new google.maps.Geocoder();
