--- a/django/sportsrec/templates/sportsrec/club_detail.html
+++ b/django/sportsrec/templates/sportsrec/club_detail.html
@@ -9,9 +9,11 @@
     <tr><th>Address</th><td>{{club.address}}</td></tr>
     <tr>
       <th>Location</th>
-      <td>
+      <td class="clickable menu-hilight">
         {% if club.latitude and club.longitude %}
-          {{club.latitude}}, {{club.longitude}}
+            <a href="{% url 'sportsrec:search_location' %}?query={{club.latitude}}, {{club.longitude}}">
+            {{club.latitude}}, {{club.longitude}}
+            </a>
         {% endif %}
       </td>
     </tr>
