Make radius update too

--- a/django/sportsrec/templates/sportsrec/search_location.html
+++ b/django/sportsrec/templates/sportsrec/search_location.html
@@ -12,7 +12,7 @@
         <input id="name" type="textbox" name="query" value="{{query}}" style="width:200px;" class="normal">
         <input type="submit" value="Search" class="normal"><br>
         <label for="radius">Within Radius:</label><br>
-        <input id="radius" type="textbox" name="radius" value="5" style="width:4%;" class="normal"> km<br>
+        <input id="radius" type="textbox" name="radius" value="{{radius}}" style="width:4%;" class="normal"> km<br>
       </p>
     </div>
 </div>
