--- a/django/sportsrec/templates/sportsrec/search_tag.html
+++ b/django/sportsrec/templates/sportsrec/search_tag.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="widget">
-  <div class="title centre">Search by name results:</div>
+  <div class="title centre">Search by tag results:</div>
   {% if search_tag %}
   {% include 'sportsrec/paginate.html' %}
   <table class="centre">
