--- a/django/sportsrec/templates/sportsrec/membership_detail.html
+++ b/django/sportsrec/templates/sportsrec/membership_detail.html
@@ -14,7 +14,16 @@
   <div class="large bold">Membership details</div>
   <table class="horizontal">
     <tr><th>Date joined</th><td>{{membership.joined}}</td></tr>
-    <tr><th>Last paid membership fees</th><td>{{membership.last_paid|default:''}}</td></tr>
+    <tr>
+    <th>Last paid membership fees</th>
+    <td{% if membership.club.owner.owner == user or admin %} class="clickable menu-hilight"{%endif%}>
+          {% if membership.club.owner.owner == user or admin %}
+          <a href="{% url 'sportsrec:membership_update' pk=membership.id %}"> {% endif %}
+          {{membership.last_paid|default:'Never'}}
+          
+          {% if membership.club.owner.owner == user or admin %}</a>{% endif %}
+    </td>
+    </tr>
   </table>
   <div class="large bold">
     <a href="{% url 'sportsrec:membership_delete' pk=membership.id %}">
