--- a/django/sportsrec/templates/sportsrec/club_member_list.html
+++ b/django/sportsrec/templates/sportsrec/club_member_list.html
@@ -42,7 +42,7 @@
         <td>{{membership.joined}}</td>
         {% if club.owner.owner == user or admin %}
         <td class="clickable menu-hilight">
-           <a href="{% url 'sportsrec:membership_update' pk=membership.member.id %}">
+           <a href="{% url 'sportsrec:membership_update' pk=membership.id %}">
           {{membership.last_paid|default:"Never"}}
           </a>
         </td>
