--- a/project final/application/django/sportsrec/templates/sportsrec/club_list.html
+++ b/project final/application/django/sportsrec/templates/sportsrec/club_list.html
@@ -1,22 +1,10 @@
 {% extends "sportsrec/base.html" %}
-{% with paginate_view='sportsrec:search_tag' %}
+{% with paginate_view='sportsrec:club_list' %}
 
 {% block main %}
 <div class="widget">
-	
-	<div class="title centre">Search for a club by tag or club type:</div>
-    <div class="large centre bold">
-      <form action="{% url 'sportsrec:search_tag' %}">
-      <p>
-      <input id="name" type="textbox" name="query" value="{{query}}" style="width:200px;">
-      <input type="submit" value="Search">
-      </p>
-    </div>
-</div>
-
-<div class="widget">
-  <div class="title centre">Search by tag results:</div>
-  {% if search_tag %}
+  <div class="title centre">All Clubs</div>
+  {% if club_list %}
   {% include 'sportsrec/paginate.html' %}
   <table class="centre">
     <thead>
@@ -31,7 +19,7 @@
       </tr>
     </thead>
     <tbody>
-      {% for club in search_tag %}
+      {% for club in club_list %}
       <tr>
         <td class="clickable menu-hilight">
           <a href="{% url 'sportsrec:club_detail' pk=club.id %}">
@@ -62,14 +50,6 @@
             </a>
           {% endif %}
         </td>
-        
-        
-        <td class="clickable menu-hilight">
-          {% if club.twitter %}
-          <a href="https://twitter.com/{{club.twitter}}">{{club.twitter}}</a>
-          {% endif %}
-        </td>
-
       {% endfor %}
     </tbody>
   </table>
