--- a/django/sportsrec/templates/sportsrec/statistics.html
+++ b/django/sportsrec/templates/sportsrec/statistics.html
@@ -9,24 +9,30 @@
       <td>
         {{user_count}}
       </td>
+      <td></td>
     </tr>
     <tr>
       <th>Total number of admins</th>
       <td>
         {{admin_count}}
       </td>
+      <td></td>
     </tr>
     <tr>
       <th>Total number of members</th>
       <td>
         {{member_count}}
       </td>
+      <td></td>
     </tr>
     <tr>
       <th>Total number of clubs</th>
+      <td>
+        {{club_count}}
+      </td>
       <td class="clickable menu-hilight">
         <a href="{% url 'sportsrec:stats_club' %}">
-          {{club_count}}
+          See number of clubs broken down by type
         </a>
       </td>
     </tr>
@@ -35,6 +41,7 @@
       <td>
         {{application_count}}
       </td>
+      <td></td>
     </tr>
   </table>
 </div>
